fixed alignment on navbar

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -1,15 +1,15 @@
 .navbar.navbar-fixed-top {
 	transition-property: all;
-	transition-duration: 0.5s;
-	transition-timing-function: initial;
-	transition-delay: 0.5s;
+	transition-duration: 0.8s;
+	transition-timing-function: ease-in-out;
+	transition-delay: 0.1s;
 }
 
 .navbar-transparent {
 	background-color: transparent;
 }
 
-.navbar-transparent .navbar-nav {
+.navbar-transparent .navbar-nav .navbar-header{
 	color: grey;
 }
 
@@ -34,7 +34,7 @@ a, ul.nav, nav.li, a:active {
 }
 
 ul.nav, li.active, a{
-	color: white !important;
+	color: sandybrown !important;
 }
 
 h1 {
@@ -109,5 +109,5 @@ video {
 }
 
 body {
-	padding-bottom: 70px;
+	padding-bottom: 90px;
 }
